main.css
:root {
    --apricot: #FBC4AB;
    --soft-orange: #FFDAB9;
    --melon: #F8AD9D;
    --coral: #F08080;
    --inst: #f5efef;
    --inred: #b34a12;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background-color: var(--inst);
    color: #333;
    min-height: 100vh;
}

header {
    background-image: url(custom/checkred-bg-gg.jpg);
    color: var(--inred);
    padding: 5px;
    text-align: center;
    font-family: "Jua", sans-serif;

}

header img {
    margin: 0;
    padding: 0;
    position: relative;
}

#canvas {
    font-family: 'Quicksand', sans-serif;
    min-height: 100vh;

}

.navbar {
    display: flex;
    justify-content: center;
    background-color: var(--inred);
    padding: 5px;
    font-family: "Jua", sans-serif;

}

.bx-nav {
    display: flex;
    justify-content: space-evenly;
    width: 450px;
}

.bx-order-ch {
    padding: 15px;
}

.navbar a {
    border-radius: 25px;
    color: white;
    padding: 7px 15px;
    text-decoration: none;
    font-size: 18px;
}

.navbar a:hover {
    background-color: #b0b0b0;
}

.dropdown {
    position: relative;
}

.dropdown-btn {
    background-color: var(--inred);
    color: white;
    border: none;
    cursor: pointer;
    font-size: 18px;
    padding: 7px 15px;
    font-family: "Jua", sans-serif;
}

.dropdown-btn:hover {
    background-color: #b0b0b0;
    border-radius: 25px;
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: white;
    min-width: 150px;
    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
    z-index: 1;
}

.dropdown-content a {
    color: black;
    padding: 5px;
    border-radius: 0px !important;
    text-decoration: none;
    display: block;
}

.dropdown-content a:hover {
    background-color: #ddd;
}

.dropdown:hover .dropdown-content {
    display: block;
}


#main-ch {
    display: flex;
}

.bx-base {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: 10px;
}

.bx-base h3 {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 10px;
}

#canvas {
    font-family: "Jua", sans-serif;

}

.base-option:hover {
    transform: scale(1.1);
    border: 2px solid var(--inred);
    background-color: #d0b3b3;
}

.base-option {
    width: 175px;
    margin: 0 5px 5px;
    border: 1px solid gray;
    border: 1px solid var(--inred);
    border-radius: 25px;
    transition: transform 0.2s;
}

.ch-base {
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    margin: 0 0 25px;
}

#vitrine-miffy,
#vitrine-bunny,
#vitrine-catinho {
    width: 550px;
    flex-wrap: wrap;
}

#bx-custom {
    display: flex;
    justify-content: space-evenly;
    align-content: center;
    padding: 15px;
    font-family: "Jua", sans-serif;
}

.ch-custom {
    display: flex;
    flex-direction: column;
    width: 450px;
    height: 460px;
    margin: 0;
}

.vitrine {
    margin-bottom: 30px;
    overflow: auto;
    max-width: 100%;
    padding: 15px;
}

.vitrine img {
    width: 70px;
    cursor: pointer;
    margin: 5px;
    border: 1px solid var(--inred);
    border-radius: 25px;
    transition: transform 0.2s;
}

.vitrine img:hover {
    transform: scale(1.1);
    border: 2px solid var(--inred);
    background-color: #d0b3b3;
}

.preview {
    display: flex;
    flex-wrap: wrap;
    width: 350px;
    height: 270px;
    margin-top: 20px;
    text-align: center;
}

.preview h4 {
    margin-top: -25px;
    padding: 5px;
}

.preview .layers {
    position: relative;
    width: 300px;
    height: 360px;
    border: 2px solid #ddd;
    border-radius: 12px;
    background-color: #fff;
    overflow: hidden;
}

.preview img {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: contain;
    display: none;
}

.custom-ready,
form button {
    background-color: #b34a12;
    padding: 5px;
    border: none;
    border-radius: 25px;
    margin: 10px;
    cursor: pointer;
    font-family: "Jua", sans-serif;
    z-index: 10;
}

.custom-ready:hover,
form button:hover {
    background-color: #b0b0b0;
    color: white;
}

#checkout-form {
    display: flex;
    flex-direction: column;
}

#order-check {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-family: "Jua", sans-serif;
}

#final-order {
    height: 380px;
}

label {
    font-weight: bold;
    font-family: 'Quicksand', sans-serif;
    font-size: 15px;
}

input {
    background-color: transparent;
    border: 1px solid var(--inred);
    border-radius: 25px;
    width: 350px;
    padding: 10px;
    margin: 5px;
    font-size: 15px;
    font-family: 'Quicksand', sans-serif;
}

#name {
    text-transform: capitalize;
}

#comment {
    height: 100px;
}

ul {
    list-style: none;
}

/*tabs*/

.tabs {
    display: flex;
    border-radius: 7px;
    border-bottom: 2px solid var(--inred);
    margin-bottom: 10px;
    overflow-x: auto;
    -webkit-overflow-scrolling: touch;
}

.tabs::-webkit-scrollbar {
    width: 12px;
    height: 8px;
}

::-webkit-scrollbar-track {
    background: #ffd7d7;
    border-radius: 8px;
}

::-webkit-scrollbar-thumb {
    background-color: var(--inred);
    border-radius: 8px;
}

::-webkit-scrollbar-thumb:hover {
    background-color: var(--melon);
}

.tab-btn {
    padding: 10px 20px;
    cursor: pointer;
    border: none;
    background-color: var(--t);
}

.tab-btn.active {
    background-color: white;
    border-bottom: 2px solid var(--inred);
}

.tab-content {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.b-axcategory {
    display: none;
}

.b-axcategory .active {
    display: flex;
    flex-direction: row;
}

.vitrine p {
    font-size: 12px;
    position: relative;
    font-family:"quicksand";
}

.category {
    display: none;
}

.category.active {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 10px;
}

footer {
    background-color: var(--inred);
    color: white;
    text-align: left;
    padding: 10px;
    position: relative;
    bottom: 0;
    width: 100%;
    margin-top: 20px;
    font-family: 'Jua', sans-serif;
}

.nav-links i {
    margin: 5px 5px 0 0;
}

.nav-links a {
    color: #ddd;
    text-decoration: none;
    margin-right: 10px;
}

#preview-skin {
    z-index: 1;
}

#preview-face {
    z-index: 2;
}

#preview-base {
    z-index: 4;
}

#preview-blush {
    z-index: 1;
}

#preview-hoodie {
    z-index: 3;
}

#preview-trinket {
    z-index: 5;
}

#preview-suit {
    z-index: 3;
}

#preview-acessory {
    z-index: 5;

}

#preview-trinket {
    z-index: 6;

}

#preview-bag {
    z-index: 5;

}

#preview-deco {
    z-index: 5;

}

#preview-headset {
    z-index: 5;

}

#preview-dress {
    z-index: 6;
}

@media (max-width: 768px) {

    #canvas {
        max-width: 760px !important;
    }

    #bx-custom {
        display: flex;
        flex-direction: column-reverse;
        justify-content: center;
        align-content: center;
        padding: 15px;
        font-family: "Jua", sans-serif;
    }

    #main-ch img {
        width: 85px;
    }

    .preview {
        width: 250px;
        text-align: center;
        margin-left: 55px;
    }

    #vitrine-miffy,
    #vitrine-bunny,
    #vitrine-catinho {
        width: 370px;
        margin-left: 0;
        margin-left: -15px;
        margin-top: 155px;
        height: fit-content;
    }

    .tabs {
        display: flex;
        border-radius: 7px;
        border-bottom: 2px solid var(--inred);
        margin-bottom: 10px;
        overflow-x: auto;
        -webkit-overflow-scrolling: touch;
        max-width: 760px;
    }

    .tab-content {
        max-width: 780px;
        height: auto;
        overflow-x: auto;
        max-width: 760px;
    }

    .category.active {
        display: grid;
        grid-template-columns: repeat(4, 1fr);
        gap: 3px;
        overflow: hidden;
    }

    .category::-webkit-scrollbar {
        width: 12px;
        height: 8px;
    }
    
    ::-webkit-scrollbar-track {
        background: #ffd7d7;
        border-radius: 8px;
    }
    
    ::-webkit-scrollbar-thumb {
        background-color: var(--inred);
        border-radius: 8px;
    }
    
    ::-webkit-scrollbar-thumb:hover {
        background-color: var(--melon);
    }

}

